[package]
name = "mdbook-mermaid"
version = "0.1.0"
edition = "2024"
description = "mdbook preprocessor that renders mermaid diagrams to inline SVG using mermaid-rs-renderer"
license = "MIT"
repository = "https://github.com/alvinera/mdbook-mermaid"
readme = "README.md"
keywords = ["mdbook", "mermaid", "diagram", "svg", "preprocessor"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
mermaid-rs-renderer = { version = "0.2", default-features = false }
serde_json = "1"
